fixing repo sync

--- a/Family-Recipes/css/style.css
+++ b/Family-Recipes/css/style.css
@@ -1,5 +1,5 @@
 header {
-    background-color: #A599B5;
+    background-color: #ACBDBA;
     color: black;
     text-align: center;
     padding: 15px;
@@ -15,7 +15,11 @@ header {
 #categories h1 {
     text-decoration: underline;
     font-size: xx-large;
+    color: black;
 }
 .sub-cat {
     font-size: xx-large;
+}
+body {
+    background-color: #CDDDDD;
 }
