--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,3 @@
-html {
-    font-family: "PT Sans Caption"
-}
 header {
     color: black;
     text-decoration: underline;
@@ -11,7 +8,10 @@ header {
 #intro-submit {
     text-align: center;
     background-color: darkgrey;
+    opacity: 75%;
     padding: 20px;
+    margin: 10px;
+    border-radius: 35px;
 }
 #intro-submit p {
     font-size: large;
@@ -22,7 +22,6 @@ header {
 }
 #categories h1 {
     text-decoration: underline;
-    font-size: xx-large;
     color: black;
 }
 .sub-cat {
@@ -30,6 +29,8 @@ header {
 }
 body {
     background-image: url("../img/embossed-diamond.png");
+    margin: 0;
+    font-family: 'Gloria Hallelujah', cursive;
 }
 a:visited {
     color:grey;
@@ -50,7 +51,6 @@ ul, ol {
     text-align: center;
 }
 textarea, button {
-    -webkit-border-radius: 5px;
-    -moz-border-radius: 5px;
-    border-radius: 5px;
+    border-radius: 15px;
+    padding: 10px;
 }
