--- a/css/style.css
+++ b/css/style.css
@@ -32,8 +32,11 @@ body {
     margin: 0;
     font-family: 'Gloria Hallelujah', cursive;
 }
+a {
+    text-decoration: none;
+}
 a:visited {
-    color:grey;
+    color:black;
 }
 a:link {
     color:black;
@@ -53,4 +56,40 @@ ul, ol {
 textarea, button {
     border-radius: 15px;
     padding: 10px;
+}
+.collapsible-menu {
+    background-color: rgb(255, 255, 255);
+    opacity: 75%;
+    padding: 0px 30px;
+    border-bottom: 3px solid #CDE700;
+    box-shadow: 1px 2px 3px rgba(0,0,0,0.2);
+}
+.collapsible-menu ul {
+    list-style-type: none;
+    padding: 0;
+}
+.collapsible-menu a {
+    display:block;
+    padding: 10px;
+    text-decoration: none;
+}
+#breakfast, #lunch, #dinner {
+    display: none;
+    font-family: 'Gloria Hallelujah', cursive;
+}
+.breakfast-menu, .lunch-menu, .dinner-menu label {
+    display: block;
+    cursor: pointer;
+    padding: 5px 0;
+}
+.menu-content {
+    max-height: 0;
+    overflow: hidden;
+    font-family: 'Oswald', sans-serif;
+    padding: 0 0px;
+    font-family: 'Gloria Hallelujah', cursive;
+
+}
+input:checked ~ .menu-content {
+    max-height: 100%;
 }
