--- a/css/style.css
+++ b/css/style.css
@@ -1,45 +1,56 @@
 header {
+    font-weight: lighter;
     color: black;
-    text-decoration: underline;
     text-align: center;
     padding: 15px;
     font-size: 30px;
+    height: 100px;
 }
-#intro-submit {
+h3, h2 {
     text-align: center;
-    background-color: darkgrey;
+    text-decoration: underline;
+    background-color: #fef4e9;
     opacity: 75%;
     padding: 20px;
     margin: 10px;
     border-radius: 35px;
 }
+#title {
+    font-weight: lighter;
+
+}
+#intro-submit, #instructions, #categories{
+    text-align: center;
+    background-color: #fef4e9;
+    opacity: 75%;
+    padding: 20px;
+    margin: 10px;
+    border-radius: 35px;
+    color: #960e48;
+}
 #intro-submit p {
     font-size: large;
 }
-#categories {
-    text-align: center;
-    list-style-position: inside;
-}
 #categories h1 {
-    text-decoration: underline;
+    font-weight: lighter;
     color: black;
 }
 .sub-cat {
     font-size: xx-large;
 }
 body {
-    background-image: url("../img/embossed-diamond.png");
+    background-image: url("https://donpedrobrooklyn.com/wp-content/uploads/2019/01/Minimalist-modern-mid-century-kitchen.jpg");
     margin: 0;
-    font-family: 'Gloria Hallelujah', cursive;
+    font-family: 'Montserrat', ;
 }
 a {
     text-decoration: none;
 }
 a:visited {
-    color:black;
+    color: #960e48;
 }
 a:link {
-    color:black;
+    color: #960e48;
 }
 a:hover {
     color:blue;
@@ -50,12 +61,15 @@ a:active {
 ul, ol {
     list-style: none;
 }
-#breakfast, #lunch, #dinner {
+#breakfast, #lunch, #dinner, #dessert{
     text-align: center;
 }
 textarea, button {
     border-radius: 15px;
     padding: 10px;
+}
+textarea:focus {
+    outline: none;
 }
 .collapsible-menu {
     background-color: rgb(255, 255, 255);
@@ -73,11 +87,11 @@ textarea, button {
     padding: 10px;
     text-decoration: none;
 }
-#breakfast, #lunch, #dinner {
+#breakfast, #lunch, #dinner, #dessert {
     display: none;
     font-family: 'Gloria Hallelujah', cursive;
 }
-.breakfast-menu, .lunch-menu, .dinner-menu label {
+.breakfast-menu, .lunch-menu, .dinner-menu, .dessert-menu label {
     display: block;
     cursor: pointer;
     padding: 5px 0;
@@ -85,11 +99,13 @@ textarea, button {
 .menu-content {
     max-height: 0;
     overflow: hidden;
-    font-family: 'Oswald', sans-serif;
     padding: 0 0px;
-    font-family: 'Gloria Hallelujah', cursive;
+    font-family: 'Montserrat', ;
 
 }
 input:checked ~ .menu-content {
     max-height: 100%;
+}
+#logo {
+    float: left;
 }
